...
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:text="@string/insertYourPhoneNumber"
                    android:textAppearance="@style/TextAppearance.MyTheme.Headline1" />

                <EditText
                    android:id="@+id/mobileEt"
                    style="@style/Theme.Niko.auth.EditText"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/insertYourNumberTv"
                    android:layout_centerHorizontal="true"
                    android:layout_marginHorizontal="30dp"
...
                    android:textAlignment="center"
                    android:textColorHint="@color/gray"
                    />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginBtn"
                    android:layout_width="150dp"
                    android:layout_height="56dp"
                    android:layout_below="@id/mobileEt"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="80dp"
                    android:gravity="center"
...
