...
                    android:layout_marginTop="30dp"
                    android:text="@string/insertCode"
                    android:textAppearance="@style/TextAppearance.MyTheme.Headline1" />


                <com.chaos.view.PinView
                    android:id="@+id/verificationCodeEt"
                    style="@style/PinWidget.PinView"
                    android:layout_marginVertical="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_gravity="center"
...


                </LinearLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/nextBtn"
                    android:layout_width="150dp"
                    android:layout_height="56dp"
                    android:layoutDirection="rtl"
                    app:drawableEndCompat="@drawable/ic_next"
                    android:gravity="center"
                    android:minHeight="48dp"
...
